@@ -1,4 +1,4 @@
-# P4/P5：重规划编排、原子发布与报告生命周期持久化（E50/E51/E52/E53/E54/E55/E56/E57/E58/E59/E60/E61/E62/E63/E64/E65/E66/E67/E68/E69/E70/E71/E72）
+# P4/P5：重规划编排、原子发布与报告生命周期持久化（E50/E51/E52/E53/E54/E55/E56/E57/E58/E59/E60/E61/E62/E63/E64/E65/E66/E67/E68/E69/E70/E71/E72/E73）
 
 记录日期：2026-09-20。此批次只做后端合同、JDBC 持久化和 H2 定向验证；没有启动 Docker、应用、真实 MySQL、真实模型或浏览器。
 
@@ -114,6 +114,12 @@
 新增 `JdbcCampaignRunResultBindingCoordinator`，把报告引用 retain、E70 durable binding 写入和 release 收敛到同一条共享数据源的可写 `PROPAGATION_REQUIRED` 事务。构造时检查结果存储、报告生命周期存储和事务管理器确实使用同一 `DataSource`，并拒绝只读或其他传播级别，避免调用方误把两个独立事务拼成“原子”操作。
 
 绑定前先锁定并校验当前 `RunToken`，再保留已授权的固定 `ReportRef`；token fencing、状态冲突、重复报告或任何后续异常都会回滚引用计数和绑定行。释放同样要求当前 token，并核对 durable binding 中记录的 reportRef，避免过期 token或无关报告删除活动引用。该协调器仍是显式 typed 组合件，没有注册 Graph、HTTP、chat 或 Spring 入口。
+
+### E73：request-bound run-result adapter
+
+新增 `CampaignTrustedRunResultAdapter` 作为请求边界。它不把某个租户的 owner/capability 固定在单例协调器中，而是在每次 bind/release 调用时校验 transport 传入的 `Caller` 与 `RunToken` 一致，并用本次解析出的 report owner/capability 创建短生命周期 verifier 和 E72 coordinator。这样多租户请求可以复用同一 JDBC/事务基础设施，但不会共享报告身份。
+
+release 也重新经过 `HISTORY_VIEW` 的报告授权检查，再进入 E72 的 token 与 binding reportRef 校验；错误主体、错误能力或过期 token 都不能改变引用计数。该 adapter 仍是显式 typed 组件，不进入默认 profile、Graph、HTTP、chat 或 scheduler。
 
 ## 定向验证
 
@@ -257,6 +263,14 @@ mvn.cmd -o -pl services/agent-service -am -Dtest=JdbcCampaignRunResultBindingCoo
 
 结果：4 tests，0 failures，0 errors，0 skipped；`BUILD SUCCESS`。覆盖同事务 retain+binding+release、过期 token 绑定回滚引用、过期 token 不能释放引用、release 必须匹配 durable reportRef。测试使用 H2 和本地 Spring JDBC 事务，没有启动 Docker、应用、真实 MySQL 或模型。
 
+E73 定向验证：
+
+```text
+mvn.cmd -o -pl services/agent-service -am -Dtest=CampaignTrustedRunResultAdapterTest,CampaignRunReportBindingVerifierTest -Dsurefire.failIfNoSpecifiedTests=false -Dnet.bytebuddy.experimental=true -Dmaven.compiler.useIncrementalCompilation=false test
+```
+
+结果：6 tests，0 failures，0 errors，0 skipped；`BUILD SUCCESS`。覆盖每次请求独立 owner/capability、caller 与 token 主体绑定、错误凭证不读写引用、过期 token 回滚 retain，以及正确凭证 release。测试使用 H2 和本地 Spring JDBC 事务，没有启动 Docker、应用、真实 MySQL 或模型。
+
 ## 未覆盖边界
 
 - `RevisionApplier` 是可信装配接口，本批次没有把它接入生产 `JdbcCampaignRunStore.revise` 和 `JdbcCampaignStatisticsConsumerStore.adopt`，因此不能宣称运行中 replan 已开放。
@@ -266,7 +280,7 @@ mvn.cmd -o -pl services/agent-service -am -Dtest=JdbcCampaignRunResultBindingCoo
 - E57 的运行时工厂与 E59 的报告应用服务仍是显式 typed 组合件；尚无 token resolver、业务 profile、Spring bean、HTTP/chat 接线或客户端历史/导出验收。
 - E63 只提供受 profile 保护的组合契约；默认生产 profile 不启用，当前仍没有可信 owner/capability resolver、PlanValidator/Catalog、EvidenceReader 或真实授权 provider，因此不能宣称业务入口已开放。context 测试使用 H2 迁移替身，不替代真实 MySQL 或跨服务验收。
 - E64 只提供不接 transport 的 typed adapter；resolver、owner/capability 解析仍由未来可信入口提供，尚无 HTTP/chat/tool 接线、远端取消或真实 MySQL/多实例 fencing 验收。
-- E65 只提供后端 typed read projection；E66 增加纯 legacy answer 兼容桥；E67 只扩展 response 类型和纯 adapter；E68 增加纯 run-result projection；E69 增加授权的 run/report 读取组合；E70 增加受 token fencing 保护的 durable run-result 绑定；E71 增加按 revision 的授权读取组合和 report verifier；E72 增加共享事务的 retain/bind/release 协调器。上述组件尚未由 Graph/AgentRunHarness/HTTP 生产路径调用，客户端历史/导出入口和真实 MySQL payload 演进仍待验收。
+- E65 只提供后端 typed read projection；E66 增加纯 legacy answer 兼容桥；E67 只扩展 response 类型和纯 adapter；E68 增加纯 run-result projection；E69 增加授权的 run/report 读取组合；E70 增加受 token fencing 保护的 durable run-result 绑定；E71 增加按 revision 的授权读取组合和 report verifier；E72 增加共享事务的 retain/bind/release 协调器；E73 增加按请求解析身份的 adapter。上述组件尚未由 Graph/AgentRunHarness/HTTP 生产路径调用，客户端历史/导出入口和真实 MySQL payload 演进仍待验收。
 - `JdbcReportLifecycleStore` 尚未由 `CampaignReportPublisher` 或 Admin/Agent 路由自动调用；真实 MySQL 方言、跨服务 HTTP 和客户端历史/导出仍待验。
 - E53 只提供显式 durable publisher API，尚未注册到现有自然语言 chat 或 HTTP 路由；调用方仍需在可信运行装配中提供生命周期 store。
 - 本批次没有改变旧 Graph、模型循环、Docker 资源或前端行为。
